# Sapphire

./: .gitignore  CMakeLists.txt  analyze_01a6_hex.py  analyze_01a6_primary.py  battlelog.txt  boost log.txt  console log.txt  fix_enum.py  game log.txt  notes.txt
data/actions/: IfritNormal.json  player.json
data/encounterTimelines/: IfritNormal.json
editor/: actions.json  bnpcNameIds.json  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
editor/output/: BnpcSecondHoplomachus.cpp
sql/migrations/: 20260101000000_AddRetainerSystem.sql  20260123000000_FixRetainerOwnerCharacterId.sql
src/common/: CMakeLists.txt  Common.h
src/scripts/: CMakeLists.txt  ScriptLogger.h  ScriptObject.h
src/scripts/action/DoH/: ActionTriangulate.cpp
src/scripts/action/DoM/CNJ/: ActionClericStance.cpp  ActionProtect.cpp
src/scripts/action/DoW/GLD/: ActionAwareness.cpp  ActionBulwark.cpp  ActionConvalescence.cpp  ActionFightOrFlight.cpp  ActionFlash.cpp  ActionRampart.cpp  ActionSentinel.cpp  ActionTemperedWill.cpp
src/scripts/action/arc/: ActionHeavyShot.cpp  ActionRagingStrikes.cpp  ActionStraightShot.cpp  ActionVenomousBite.cpp
src/scripts/action/buffs/: ActionCeleris.cpp
src/scripts/action/common/: ActionDye.cpp  ActionGlamour.cpp  ActionReturn.cpp  ActionSprint.cpp  ActionSprint3.cpp  ActionTeleport.cpp
src/scripts/action/gla/: ActionFastBlade.cpp  ActionRampart.cpp
src/scripts/action/lnc/: ActionBloodForBlood.cpp  ActionChaosThrust.cpp  ActionElusiveJump.cpp  ActionFeint.cpp  ActionHeavyThrust.cpp  ActionKeenFlurry.cpp  ActionLegSweep.cpp  ActionLifeSurge.cpp  ActionPhlebotomize.cpp  ActionPowerSurge.cpp  ActionSpineShatterDive.cpp
src/scripts/action/mobs/family/Ifrit/: ActionVulcanBurst.cpp
src/scripts/battlenpc/: BnpcChigoe.cpp  BnpcGroundSquirrel.cpp  BnpcLittleLadybug.cpp  BnpcSecondHoplomachus.cpp  BnpcTricksterImp.cpp  BnpcWaterSprite.cpp  Elementals.cpp  ScriptLoader.cpp.in
src/scripts/battlenpc/Elementals/: Sprites.cpp
src/scripts/battlenpc/elementals/aetherials/: Sprites.cpp
src/scripts/battlenpc/soulkin/animated/: Golem.cpp
src/scripts/battlenpc/spoken/:  EnemyHumanoids.cpp
src/scripts/battlenpc/spoken/cognizants/:  EnemyHumanoids.cpp
src/scripts/bnpc/: BnpcGroundSquirrel.cpp
src/scripts/common/: CmnDefRetainerCall.cpp  CmnDefRetainerDesk.cpp  NewScript.cpp  cmndefrentalchocobo.cpp
src/scripts/common/warptaxi/: RentalChocoboCommandHandler.cpp  WarpInnGridania.cpp  WarpRentalChocobo.cpp
src/scripts/instances/dungeons/: Sastasha.cpp
src/scripts/instances/questbattles/: AndMyAxe.cpp  AttheEndofOurHope.cpp  ChasingShadows.cpp  EscapefromCastrumCentri.cpp  EveryLittleThingSheDoesIsMagitek.cpp  FiveEasyPieces.cpp  GuardianofEorzea.cpp  MasterofMarksmanship.cpp  NinjaBathin.cpp  PrimalBurdens.cpp  Quarantine.cpp  SecuringtheLocks.cpp  SpiritholdBroken.cpp  TheConsequencesofAnger.cpp  TheDefiantOnes.cpp  TheLominsanWay.cpp  UldahsMostWanted.cpp
src/scripts/instances/trials/: TheBowlofEmbers.cpp
src/scripts/quest/classquest/DoW/GLA/: ClsGla100.cpp  ClsGla101.cpp
src/scripts/quest/classquest/LNC/: ClsLnc000.cpp  ClsLnc100.cpp  ClsLnc998.cpp  ClsLnc999.cpp
src/scripts/quest/subquest/blackshroud_central/: SubFst035.cpp
src/scripts/quest/subquest/gridania/: SubFst070.cpp
src/scripts/statuseffect/: StatusEffectStraighterShot.cpp
src/scripts/statuseffect/ailments/: StatusEffectSlow.cpp  StatusEffectStun.cpp
src/scripts/statuseffect/arc/: StatusEffectRagingStrikes.cpp  StatusEffectStraighterShot.cpp  StatusEffectVenomousBite.cpp
src/scripts/statuseffect/buff/: StatusEffectHaste.cpp
src/scripts/statuseffect/gla/: StatusEffectRampart.cpp
src/scripts/statuseffect/lnc/: StatusEffectBloodForBlood.cpp  StatusEffectChaosThrust.cpp  StatusEffectDisembowel.cpp  StatusEffectHeavyThrust.cpp  StatusEffectKeenFlurry.cpp  StatusEffectLifeSurge.cpp  StatusEffectPhlebotomize.cpp  StatusEffectPowerSurge.cpp
src/tools/csv_struct_gen/: CMakeLists.txt  main.cpp
src/tools/csv_struct_gen/CSV/: Action.csv
src/tools/csv_struct_gen/Header/: Structs.h
src/world/: CMakeLists.txt  ForwardsZone.h  WorldServer.cpp
src/world/AI/Fsm/: StateCombat.cpp
src/world/Action/: Action.cpp  Action.h  ActionLut.h  ActionResultBuilder.cpp  CommonAction.h
src/world/Actor/: BNpc.cpp  BNpc.h  BNpcScript.h  Chara.cpp  Chara.h  Common.BNpc.h  Common.BNpc.h.bup  EventObject.cpp  EventObject.h  GameObject.cpp  GameObject.h  Npc.cpp  Npc.h  Player.cpp  Player.h  PlayerInventory.cpp  PlayerQuest.cpp  PlayerSql.cpp  check_enum_duplicates.py
src/world/ContentFinder/: ContentFinder.cpp
src/world/Encounter/: Encounter.cpp  Encounter.h  ScheduleCondition.cpp  TimelinePack.cpp  Timepoint.cpp
src/world/Inventory/: Item.cpp  ItemContainer.cpp
src/world/Leve/: Levequest.cpp  Levequest.h
src/world/Manager/: ActionMgr.cpp  ChocoboMgr.cpp  ChocoboMgr.h  DebugCommandMgr.cpp  DebugCommandMgr.h  EventMgr.cpp  InventoryMgr.cpp  ItemMgr.cpp  MapMgr.cpp  MapMgr.h  PlayerMgr.cpp  PlayerMgr.h  RNGMgr.h  RetainerMgr.cpp  RetainerMgr.h  TerritoryMgr.cpp  WarpMgr.cpp
src/world/Network/: GameConnection.cpp  GameConnection.h
src/world/Network/Handlers/: CFHandlers.cpp  EventHandlers.cpp  InventoryHandler.cpp  PacketCommandHandler.cpp  PacketHandlers.cpp
src/world/Network/PacketWrappers/: ActorControlPacket.h  ActorControlSelfPacket.h  EffectPacket.h  EventPlayPacket.h  LevePacket.h  NpcSpawnPacket.h  PlayerSetupPacket.h  PlayerSpawnPacket.h  RetainerSpawnPacket.h  UpdateInventorySlotPacket.h
src/world/Network/Util/: PacketUtil.cpp  PacketUtil.h
src/world/Script/: NativeScriptApi.cpp  NativeScriptApi.h  NativeScriptMgr.cpp  NativeScriptMgr.h  ScriptInfo.h  ScriptLoader.cpp  ScriptLoader.h  ScriptMgr.cpp  ScriptMgr.h
src/world/StatusEffect/: StatusEffect.cpp
src/world/Territory/: InstanceContent.cpp  InstanceContent.h  InstanceObjectCache.cpp  InstanceObjectCache.h  Territory.cpp  Territory.h
src/world/Util/: ActorFilter.cpp  ActorFilter.h
tools/: generate_opcode_alignment_report.ps1  parse_retainer.ps1  realign_opcode_table_filtered.ps1
(+50 files in other folders)
